# EECS6894-fa25

./: .gitignore  CMakeLists.txt  README.md
artifact/protoacc/: README.md  bench_workload.py  gen_workloads.py  make_all_plots.py  parse_logs.py  roofline.py  roofline_hwsw.py  run_bench.sh  setup_env.sh
artifact/protoacc/results/: ceilings.json  raw_runs.csv  roofline_input.csv  roofline_input_hw.csv
chipyard-roofline/: run_all.sh
chipyard-roofline/src/: bench_roofline.c  gen_workloads.py  parse_logs.py  roofline.py  roofline_hwsw.py  run_bench.sh  run_stream.sh
kernels/: varint_decode.c  zigzag_encode.c
mlir/: addressbook_llvm.mlir  varint_llvm.mlir  zigzag_llvm.mlir  zigzag_protoacc.mlir
mlir/tests/protoacc/: zigzag_llvm.mlir
protoacc-dialect/: CMakeLists.txt
protoacc-dialect/include/ProtoAcc/: ProtoAccDialect.h  ProtoAccDialect.td  ProtoAccOps.h  ProtoAccOps.td
protoacc-dialect/include/ProtoAcc/Transforms/: Passes.h
protoacc-dialect/include/protoacc/Conversion/: Passes.td
protoacc-dialect/include/protoacc/IR/: ProtoAccDialect.td  ProtoAccOps.td
protoacc-dialect/lib/Conversion/ProtoAccToLLVM/: ProtoAccToLLVM.cpp
protoacc-dialect/lib/IR/: ProtoAccDialect.cpp  ProtoAccOps.cpp
protoacc-dialect/lib/ProtoAcc/: ProtoAccDialect.cpp  ProtoAccOps.cpp
protoacc-dialect/lib/Transforms/: LowerToProtoAcc.cpp
protoacc-dialect/tools/: protoacc-opt.cpp
protoacc-dialect/tools/protoacc-opt/: protoacc-opt.cpp
protoacc_project/: .gitignore  readme.md
protoacc_project/HyperProtoBench/: Makefile  plot_speedup.py  run_all.py  run_test_protoacc.py  stream
protoacc_project/protoacc/: CMakeLists.txt  ex.mlir
protoacc_project/protoacc/include/protoacc/: CMakeLists.txt  ProtoAcc.td  ProtoAccDialect.h  ProtoAccDialect.td  ProtoAccOps.h  ProtoAccOps.td  ProtoAccPasses.h  ProtoAccPasses.td
protoacc_project/protoacc/lib/: CMakeLists.txt  protoacc.cpp
protoacc_project/protoacc/lib/Transforms/: BitPack.cpp  CMakeLists.txt  ConvertToProtoAcc.cpp  LowerProtoAccToVector.cpp
protoacc_project/protoacc/tools/protoacc-opt/: CMakeLists.txt  protoacc-opt.cpp
scripts/: check_zigzag.sh  gen_mlir.sh  roofline_lab_setup.sh
